fix code-title overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,7 +44,7 @@ pre code.hljs {
 }
 
 .rehype-code-title {
-  @apply text-ngray-300 text-sm font-mono py-3 px-4 bg-ngray-800 border-b border-ngray-600 rounded-t-md;
+  @apply text-ngray-300 text-sm font-mono py-3 px-4 bg-ngray-800 border-b border-ngray-600 rounded-t-md break-all;
 }
 
 .rehype-code-title + pre {
